--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,22 @@ html,body {
 	font-size: 21px;
 	padding: 14px 24px;
 }
+
+.jumbotron h3 {
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	line-height: 1;
+}
 .contact-home{
 	border-top: 5px solid #666666;
 	border-bottom: 5px solid #666666;
 	height: 373px;
 	margin: 10px 5px;
+	background-color: #eeeeee;
+	padding: 0 10px;
+}
+
+.contact-home blockquote {
+	font-size: 1.2em;
 }
