--- a/wordpress/Esparza-Theme/style.css
+++ b/wordpress/Esparza-Theme/style.css
@@ -1,128 +1,192 @@
 /*   
-Theme Name: BLANK Theme
-Theme URI: http://digwp.com
-Description: This is just a BLANK starter WordPress Theme template -- WordPress v3.0.1
-Author: Chris Coyier
-Author URI: http://chriscoyier.net
+Theme Name: EsparzaPC Theme
+Theme URI: http://shaddaisolutions.com
+Description: Template to be used for the SparzaPC web site.
+Author: Guillermo Pincay
+Author URI: http://twitter.com/guillermaster
 Version: 2
 */
 
-@media screen {
+html,body {
+	height: 100%;
+	background: url(../img/background.png) repeat;
+    /* The html and body elements cannot have any padding or margin, otherwise the footer wont stick at the bottom of the window */
+}
 
-* { margin: 0; padding: 0; }
-body { background: white; font: 14px/1.4 Georgia, Serif; }
-.screen-reader-text { position: absolute; left: -9999px; top: -9999px; }
-.clear { clear: both; }
-.group:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
-* html .group, *:first-child+html .group { zoom: 1; } /* First selector = IE6, Second Selector = IE 7 */
+#page-wrap, .container {
+	margin: 0 auto;
+    max-width: 1366px;
+	background: #1a1a1a;
+	padding: 0 15px;
+}
 
-#page-wrap { width: 960px; margin: 20px auto; }
+.masthead {
+	color: #ffffff;
+}
 
-h1, h2, h3 { font-weight: normal; margin: 0 0 10px 0; }
-h1 { }
-h2 { }
-h3 { }
+.container > hr {
+    margin: 0 0 60px;
+    border-color: #0f1f71;
+    border-width: 5px;
+}
 
-p { margin: 0 0 10px 0; }
-a { }
-a:hover { } 
+.hero-unit{
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
 
-blockquote { }
-blockquote p { }
+@media screen and (max-width:400px) {
+	@-ms-viewport{
+		width:320px;
+	}
+}
 
-ul, ol { margin: 0 0 10px 0; }
+.footer .container {
+    margin: 0 auto;
+    height: 100px;
+    max-width: 1366px;
+	padding: 20px;
+    background-color: #0f1f71;
+    color: #fff;
+}
 
-.post { }
+.top-header .container {
+    margin: 0 auto;
+    max-width: 1366px;
+	padding: 5px 15px;
+    background-color: #0f1f71;
+}
 
-.entry { }
-.entry a { }
-.entry a:hover { }
+.top-header .container span {
+	color: #fff;
+    font-size: 0.7em;
+    text-transform: uppercase;
+}
 
-pre { }
-code, tt { }
+.masthead .container{
+	padding: 20px 10px;	
+}
 
-#meta { }
-.postmetadata { }
+.masthead-contactinfo{
+	font-size: 1.2em;
+}
 
-#sidebar { }
+.masthead-contactinfo li{
+	background: url(../img/ico-map-marker.png) no-repeat;
+	padding-left: 40px;
+}
 
-.navgation { }
-   .next-posts { }
-   .prev-posts { }
+.masthead-contactinfo li:nth-child(2)  {
+	background: url(../img/ico-phone.png) no-repeat;
+	padding-left: 40px;
+}
 
-#searchform { }
-	#s { }
-	#searchsubmt { }
-	
-ol.commentlist { list-style: none; }
-ol.commentlist li { }
-ol.commentlist li.alt { }
-ol.commentlist li.bypostauthor { }
-ol.commentlist li.byuser { }
-ol.commentlist li.comment-author-admin { }
-ol.commentlist li.comment { border-bottom: 1px dotted #666; padding: 10px; }
-ol.commentlist li.comment div.comment-author { }
-ol.commentlist li.comment div.vcard { }
-ol.commentlist li.comment div.vcard cite.fn { font-style: normal; }
-ol.commentlist li.comment div.vcard cite.fn a.url { }
-ol.commentlist li.comment div.vcard img.avatar { float:right; margin: 0 0 10px 10px; }
-ol.commentlist li.comment div.vcard img.avatar-32 { }
-ol.commentlist li.comment div.vcard img.photo { }
-ol.commentlist li.comment div.vcard span.says { }
-ol.commentlist li.comment div.commentmetadata { }
-ol.commentlist li.comment div.comment-meta { font-size: 10px; }
-ol.commentlist li.comment div.comment-meta a { color: #ccc; }
-ol.commentlist li.comment p { }
-ol.commentlist li.comment ul { }
-ol.commentlist li.comment div.reply { font-size: 11px; }
-ol.commentlist li.comment div.reply a { font-weight: bold; }
-ol.commentlist li.comment ul.children { list-style: none; margin: 10px 0 0; }
-ol.commentlist li.comment ul.children li { }
-ol.commentlist li.comment ul.children li.alt { }
-ol.commentlist li.comment ul.children li.bypostauthor { }
-ol.commentlist li.comment ul.children li.byuser { }
-ol.commentlist li.comment ul.children li.comment { }
-ol.commentlist li.comment ul.children li.comment-author-admin { }
-ol.commentlist li.comment ul.children li.depth-2 { border-left: 5px solid #555; margin: 0 0 10px 10px; }
-ol.commentlist li.comment ul.children li.depth-3 { border-left: 5px solid #999; margin: 0 0 10px 10px; }
-ol.commentlist li.comment ul.children li.depth-4 { border-left: 5px solid #bbb; margin: 0 0 10px 10px; }
-ol.commentlist li.comment ul.children li.depth-5 { }
-ol.commentlist li.comment ul.children li.odd { }
-ol.commentlist li.even { background: #fff; }
-ol.commentlist li.odd { background: #f6f6f6; }
-ol.commentlist li.parent { border-left: 5px solid #111; }
-ol.commentlist li.thread-alt { }
-ol.commentlist li.thread-even { }
-ol.commentlist li.thread-odd { }
 
-form { }
-input[type=text] { }
-textarea { }
+/* Wrapper for page content to push down footer */
+/*      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+       /* margin: 0 auto -60px;
+      }*/
 
-} /* END screen media */
+      /* Set the fixed height of the footer here */
+      
+      
+/* Main marketing message and sign up button */
+.jumbotron {
+	border-top: 5px solid #666666;
+	border-bottom: 5px solid #666666;
+	margin: 10px 5px;
+	text-align: center;
+	height: 373px;
+}
+.jumbotron h1 {
+	font-size: 70px;
+	line-height: 1;
+}
+.jumbotron .lead {
+	font-size: 24px;
+	line-height: 1.25;
+}
+.jumbotron .btn {
+	font-size: 21px;
+	padding: 14px 24px;
+}
 
-@media print {
+.jumbotron h3 {
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	line-height: 1;
+}
+.contact-home{
+	border-top: 5px solid #666666;
+	border-bottom: 5px solid #666666;
+	height: 373px;
+	margin: 10px 5px;
+	background-color: #eeeeee;
+	padding: 0 10px 0 24px;
+}
 
-.do-not-print { display: none; }
-#comments { page-break-before: always; }
+.contact-home blockquote {
+	font-size: 1.2em;
+	margin: 5px;
+}
 
-body { width: 100% !important; margin: 0 !important; padding: 0 !important; line-height: 1.4; word-spacing: 1.1pt; letter-spacing: 0.2pt; font-family: Garamond,"Times New Roman", serif; color: #000; background: none; font-size: 12pt; }
-h1,h2,h3,h4,h5,h6 { font-family: Helvetica, Arial, sans-serif; }
-h1 { font-size: 19pt; }
-h2 { font-size:17pt; }
-h3 { font-size:15pt; }
-h4,h5,h6 { font-size:12pt; }
-code { font: 10pt Courier, monospace; } 
-blockquote { margin: 1.3em; padding: 1em; }
-img { display: block; margin: 1em 0; }
-a img { border: none; }
-table { margin: 1px; text-align:left; }
-th { border-bottom: 1px solid #333;  font-weight: bold; }
-td { border-bottom: 1px solid #333; }
-th, td { padding: 4px 10px 4px 0; }
-caption { background: #fff; margin-bottom: 2em; text-align: left; }
-thead { display: table-header-group; }
-tr { page-break-inside: avoid; } 
-a { text-decoration: none; color: black; }
-	
-} /* END print media */
+/* MAIN CONTENT */
+.main-content{
+	-webkit-border-radius: 5px|;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+	background: #eeeeee;
+	padding: 20px;
+}
+
+.inner-content h1{
+	width: 110%;
+	background: #1a1a1a;
+	color: #ffff00;
+	padding: 10px 20px;
+	margin: 5px -20px 20px -20px;
+}
+
+.inner-content h3{
+	background: #0f1f71 url(../img/h3-bg-bullet.png) no-repeat 19px 5px;
+	margin: 5px -20px;
+	padding: 5px 20px 5px 50px;
+	-webkit-border-radius: 0 15px 15px 0;
+    -moz-border-radius: 0 15px 15px 0;
+    border-radius: 0 15px 15px 0;
+	width: 260px;
+	color: #fffd3b;
+	font-size: 1.3em;
+}
+
+.side-bible-quote {
+}
+
+.side-bible-quote blockquote {
+	background: #0f1f71;
+	color: #fffd3b;
+	font-size: 1.1em;
+	quotes: "\201C""\201D""\2018""\2019";
+}
+
+.side-bible-quote blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+.side-bible-quote blockquote p {
+  display: inline;
+}
+
+.side-bible-quote small{
+	color: #ffffff;
+}
+
