--- a/wordpress/Esparza-Theme/style.css
+++ b/wordpress/Esparza-Theme/style.css
@@ -9,7 +9,7 @@ Version: 2
 
 html,body {
 	height: 100%;
-	background: url(../img/background.png) repeat;
+	background: url(img/background.png) repeat;
     /* The html and body elements cannot have any padding or margin, otherwise the footer wont stick at the bottom of the window */
 }
 
@@ -72,12 +72,12 @@ html,body {
 }
 
 .masthead-contactinfo li{
-	background: url(../img/ico-map-marker.png) no-repeat;
+	background: url(img/ico-map-marker.png) no-repeat;
 	padding-left: 40px;
 }
 
 .masthead-contactinfo li:nth-child(2)  {
-	background: url(../img/ico-phone.png) no-repeat;
+	background: url(img/ico-phone.png) no-repeat;
 	padding-left: 40px;
 }
 
@@ -153,7 +153,7 @@ html,body {
 }
 
 .inner-content h3{
-	background: #0f1f71 url(../img/h3-bg-bullet.png) no-repeat 19px 5px;
+	background: #0f1f71 url(img/h3-bg-bullet.png) no-repeat 19px 5px;
 	margin: 5px -20px;
 	padding: 5px 20px 5px 50px;
 	-webkit-border-radius: 0 15px 15px 0;
